--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -22,6 +22,12 @@
                         > Documents Classiques
                     </a>
                 </li>
+                <li *ngxPermissionsOnly="['NUMARCH_SIMPLE','NUMARCH_ADMIN']">
+                    <a [routerLink]="['/reprise']"
+                    routerLinkActive="active" 
+                        > Reprise des archives
+                    </a>
+                </li>
             </ul>
             
         </li>
